# goyabu-cli

./: .anime-lastsession.json  .gitignore  .lastsession.json  Boku No Hero Academia.m3u  LICENSE  README.md  anime.bat  anime.py  animeScrapper.py  dropdown.py  install.sh  main.py  manager.py  playerManager.py  pyproject.toml  rawserver.py  requirements.txt  runner.py  scraper.py  scraperManager.py  scraper_status.py  sessionManager.py  setup.py  test.py  translation.py  utils.py
.github/workflows/: scraper_status.py  status.yml
goyabucli/: __main__.py  anilistManager.py  cli.py  dropdown.py  playerManager.py  progress.py  scraper.py  scraperManager.py  serverManager.py  sessionManager.py  translation.py  utils.py
goyabucli/extractors/: blogger.py
goyabucli/scrapers/: anime123.py  animefire.py  gogoanime.py  goyabu.py  goyabuNew.py  superanimes.py  vizer.py
old_scrapers/: aniList.py  animDl.py  animesonline.py  goyabu.py  vizer.py
public/: oauth.html
scrapers/: animefire.py  goyabuNew.py
scrapersversiontwo/: animefire.py  goyabuNew.py
scrappers/: aniList.py  animDl.py  animeScrapper.py  animesonline.py  dropdown.py  gogoanime.py  goyabu.py  install.sh  requirements.txt  utils.py  vizer.py
scrappers/scrappers/: aniList.py  utils.py
